# LW_5e

./: .gitignore  CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: tasks.c
